@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-chroot.sh,v 1.29 2005/02/28 23:21:09 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-chroot.sh,v 1.29.2.1 2005/04/29 21:25:50 wolf31o2 Exp $
 		
 portage_version=`/usr/lib/portage/bin/portageq best_version / sys-apps/portage \
 	| cut -d/ -f2 | cut -d- -f2,3`
@@ -15,12 +15,12 @@ fi
 /usr/sbin/env-update
 source /etc/profile
 
-if [ -x /usr/bin/gcc-config ]
-then
-	gcc_current=`gcc-config -c`
-	gcc-config 3 && source /etc/profile
-	gcc-config ${gcc_current} && source /etc/profile
-fi
+#if [ -x /usr/bin/gcc-config ]
+#then
+#	gcc_current=`gcc-config -c`
+#	gcc-config 3 && source /etc/profile
+#	gcc-config ${gcc_current} && source /etc/profile
+#fi
 
 [ -f /tmp/envscript ] && source /tmp/envscript
 		
