@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.11 2005/04/29 18:09:56 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.12 2005/04/29 21:25:50 wolf31o2 Exp $
+
+  29 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/stage1-chroot.sh,
+  targets/stage1/stage1-preclean2-chroot.sh:
+  Commenting ugly gcc-config hack, as it should no longer be needed.
 
   29 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   examples/livecd-stage2_template.spec:
